added welcome screen & better ui for login/signup

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -137,8 +137,9 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.3.2
   provider: ^6.0.5
-
+  flutter_svg: ^2.0.10+1
   image_picker: ^1.1.2
+  
 
 
 dev_dependencies:
@@ -157,6 +158,12 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  
+
+  assets:
+    - assets/images/header_pattern.svg
+    - assets/images/wallet_icon.svg
+    - assets/images/file.svg 
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
